# rfid-scanner

./: platformio.ini
boards/: cstmpico.json
firmware/: Cargo.toml  flash.sh
firmware/.cargo/: config.toml
firmware/mfrc-blocking/: Cargo.toml
firmware/mfrc-blocking/src/: consts.rs  debug.rs  lib.rs  mifare.rs  pcd.rs  picc.rs
firmware/src/: main.rs
include/MFRC/: MFRC522.h
lib/MFRC/: MFRC522.h  MFRC522_uart.cpp
src/: main.cpp
web/: bun.lockb  package.json
web/src/routes/: +page.svelte
