[package]
name = "rfid-firmware"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"
embedded-hal = "1.0.0"
heapless = "0.8.0"
panic-halt = "1.0.0"
rp-pico = "0.9.0"
usb-device = "0.3.2"
usbd-hid = "0.8.2"
usbd-picotool-reset = "0.3.0"
usbd-serial = "0.2.2"
blocking-mfrc522 = { path = "./mfrc-blocking" }
embedded-hal-bus = "0.3.0"
alloc-cortex-m = "0.4.4"
